# gpu_webcam

./: CMakeLists.txt  EdgeDetectionExample.cpp  WatermarkExample.cpp  main.cpp
cuda-kernels/: kernel1.cu  kernel2.cu
